fix: VL - hide scrollbar

--- a/common/components/dicom-window/elements/dicom-window/_dicom-window.scss
+++ b/common/components/dicom-window/elements/dicom-window/_dicom-window.scss
@@ -8,7 +8,7 @@
   width: 100%;
   height: 100%;
 
-  overflow: auto;
+  overflow: overlay;
 }
 
 // dicom window grid
