--- a/common/components/virtual-layout/_virtual-layout.scss
+++ b/common/components/virtual-layout/_virtual-layout.scss
@@ -25,12 +25,4 @@
 
 .irapha-virtual-layout__item {
   overflow: hidden;
-
-  &:nth-child(1) {
-    background-color: red;
-  }
-
-  &:nth-child(2) {
-    background-color: blue;
-  }
 }
