--- a/viewer/css/index.css
+++ b/viewer/css/index.css
@@ -9427,7 +9427,7 @@ button[disabled] {
   gap: 48px;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: overlay;
 }
 
 .irapha-dicom-window__grid {
@@ -9875,12 +9875,6 @@ button[disabled] {
 
 .irapha-virtual-layout__item {
   overflow: hidden;
-}
-.irapha-virtual-layout__item:nth-child(1) {
-  background-color: red;
-}
-.irapha-virtual-layout__item:nth-child(2) {
-  background-color: blue;
 }
 
 .content {
